--- a/Widget_Schrödinger_Ind.ipynb
+++ b/Widget_Schrödinger_Ind.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,14 @@
     "\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual, Label, Layout\n",
     "\n",
-    "\n"
+    "import matplotlib.pylab as pylab\n",
+    "params = {'legend.fontsize': 'x-large',\n",
+    "          'figure.figsize': (14, 6),\n",
+    "         'axes.labelsize': 'x-large',\n",
+    "         'axes.titlesize':'x-large',\n",
+    "         'xtick.labelsize':'x-large',\n",
+    "         'ytick.labelsize':'x-large'}\n",
+    "pylab.rcParams.update(params)\n"
    ]
   },
   {
